# april_msgs

./: .gitignore  CMakeLists.txt  README.md  april_msgs_mapping_rule.yaml  map_rules.yaml  package.xml
action/: Handover.action  MoveToPose.action
action_ros1/: ExecuteGraspTrajectory.action  MoveToGoalJointPose.action  MoveToGraspPose.action
cmake/: CMakeListsROS1.txt  CMakeListsROS2.txt
msg/: ActionCommon.msg  BoundingBox.msg  BoundingBoxes.msg  ClusteredObject.msg  ClusteredObjects.msg  ComponentStatus.msg  Debug.msg  DetectedObject.msg  Emergency.msg  EmergencyRequestStatus.msg  Environment.msg  EnvironmentNode.msg  FatigueAnalysis.msg  GraspFacts.msg  GraspTrajectory.msg  Hand.msg  HumanBehaviour.msg  HumanGraspingStrategies.msg  HumanHandGesture.msg  HumanMotion.msg  HumanParameterIntention.msg  HumanSight.msg  NeuromorphicSensing.msg  ObjectEstimatedPose.msg  ObjectsEstimatedPoses.msg  PassportValidation.msg  Person.msg  PersonList.msg  PhysicalObject.msg  QualityCheckResult.msg  README.md  RobotArmKinematic.msg  RobotGraspingStrategies.msg  RobotHandKinematic.msg  RobotHighLatencyCorrections.msg  RobotLowLatencyCorrections.msg  ShelfLife.msg  SymbolicAction.msg  Tactile.msg
msg/ros1/sim/: HumanHandGesture.msg  RobotHand.msg  RobotHandKinematic.msg  Tactile.msg
msg/ros1/sim_sem/: HumanBehaviour.msg
msg/ros2/sem/: EmergencyRequestStatus.msg
msg/ros2/sim/: FatigueAnalysis.msg  HumanParameterIntention.msg  RobotArm.msg  RobotArmKinematic.msg  RobotHand.msg
msg/ros2/sim_sem/: HumanMotion.msg  PhysicalObject.msg
msg/sim_sem/: SIMHumanParameterIntention.msg  SIMHumanSight.msg  SIMRobotArm.msg  SIMRobotGraspingStrategies.msg  SIMSEMEnvironment.msg  SIMSEMHumanBehaviour.msg  SIMSEMHumanGraspingStrategies.msg
msg_ros1/: BoundingBox.msg  DetectedObjects.msg  EmergencyRequestStatus.msg  Environment.msg  FatigueAnalysis.msg  HumanBehaviour.msg  HumanHandGesture.msg  HumanMotion.msg  HumanParameterIntention.msg  HumanSight.msg  Output.msg  PhysicalObject.msg  RobotArm.msg  RobotGraspingStrategies.msg  RobotHand.msg  RobotHandKinematic.msg  RobotLowLatencyCorrections.msg  Tactile.msg
msg_ros2/: PassportValidation.msg
msg_ros2/pem/: ClusteredObject.msg  DetectedObject.msg  DetectedObjects.msg  EnvironmentNode.msg  SymbolicAction.msg
msg_ros2/sem/: Emergency.msg  EmergencyRequestStatus.msg  NeuromorphicSensing.msg  RobotLowLatencyCorrections.msg
msg_ros2/sim/: FatigueAnalysis.msg  HumanHandGesture.msg  HumanParameterIntention.msg  HumanSight.msg  RobotArm.msg  RobotArmKinematic.msg  RobotGraspingStrategies.msg  RobotHand.msg  RobotHandKinematic.msg  Tactile.msg
msg_ros2/sim_sem/: Environment.msg  HumanBehaviour.msg  HumanGraspingStrategies.msg  HumanMotion.msg  PhysicalObject.msg  RobotHighLatencyCorrections.msg
msg_ros2/yarp/: Output.msg
srv/: GetPregraspPose.srv  PemuStatistics.srv  TcpConnect.srv  Weigh.srv
srv_ros1/: GetSymbolicAction.srv  ValidateGrasp.srv
