<?xml version="1.0"?>

<package format="2">

  <name>april_msgs</name>

  <version>0.0.1</version>

  <description>
      Package containing msg, srv and action files of APRIL system.
  </description>

  <maintainer email="andreabu@prensilia.com">Andrea Burani</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/april_msgs</url> -->

  <author email="andreabu@prensilia.com">Andrea Burani</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
