<?xml version="1.0"?>

<package format="3">

  <name>april_msgs</name>

  <version>0.0.1</version>

  <description>
      Package containing msg, srv and action files of APRIL system.
  </description>

  <maintainer email="andreabu@prensilia.com">Andrea Burani</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/april_msgs</url> -->

  <author email="andreabu@prensilia.com">Andrea Burani</author>

    <!--  ROS1 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 1">sensor_msgs</build_depend>
  <build_export_depend condition="$ROS_VERSION == 1">std_msgs</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">sensor_msgs</build_export_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">std_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">sensor_msgs</exec_depend>

  <!--  ROS2 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <!-- common dependencies -->
  <depend>std_msgs</depend>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

<!--
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
-->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
