<?xml version="1.0"?>

<package format="3">

  <name>april_msgs</name>

  <version>0.0.1</version>

  <description>
      Package containing msg, srv and action files of APRIL system.
  </description>

  <maintainer email="andreabu@prensilia.com">Andrea Burani</maintainer>
  <maintainer email="jonathan.barmagen@iit.it">Jonathan Z. Bar-Magen Numhauser</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/april_msgs</url> -->

  <author email="andreabu@prensilia.com">Andrea Burani</author>
  <author email="jonathan.barmagen@iit.it">Jonathan Z. Bar-Magen Numhauser</author>

    <!--  ROS1 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 1">sensor_msgs</build_depend>
  <build_export_depend condition="$ROS_VERSION == 1">std_msgs</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">sensor_msgs</build_export_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">std_msgs</exec_depend>
  <!--exec_depend condition="$ROS_VERSION == 1">sensor_msgs</exec_depend-->

  <!--  ROS2 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
  <build_depend condition="$ROS_VERSION == 2">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">sensor_msgs</exec_depend>

  <!-- common dependencies -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <ros1_bridge mapping_rules="map_rules.yaml"/>
  </export>

</package>
